2016-09-15  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug ##48898: power_usart3_* functions no more defined in power.h
	* include/avr/power.h (__AVR_HAVE_PRR_PRSCR): Change to
	__AVR_HAVE_PRR_PRPSCR.
	(power_lfrs_enable): define if __AVR_HAVE_PRR0_PRLFRS is present.
	(power_twi1_enable): define if __AVR_HAVE_PRR0_PRTWI1 is present.
	(power_lfph_enable): define if __AVR_HAVE_PRR1_PRLFPH is present.
	(power_lftp_enable): define if __AVR_HAVE_PRR1_PRLFTP is present.
	(power_spi_enable): define if __AVR_HAVE_PRR1_PRSPI is present.
	(power_usart3_enable): define if __AVR_HAVE_PRR1_PRUSART3 is present.
	(power_spi2_enable): define if __AVR_HAVE_PRR2_PRSPI2 is present.
	(power_twi2_enable): define if __AVR_HAVE_PRR2_PRTWI2 is present.

2016-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix for bug #49020: dtostre() flags documentation error
	* include/stdlib.h: Fix documentation of dtostre() flags.

2016-08-14  Aurelien Jarno  <aurelien@aurel32.net>

	Fix for bug #36933: Documentation no longer correctly describes how to
	declare strings for storage in program memory
	* doc/api/pgmspace.dox: Add const keyword to variables in PROGMEM
	section.

2016-04-04  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8964: Update tests
	* tests/simulate/math/isinf-01.c: Update test condition as the expected
	value of isinf is non-zero in case of argument is infinite.
	* tests/simulate/math/signbit-01.c: Likewise for signbit function.
	* tests/simulate/math/modf-np.c: Update test to use avr-libc's modf
	function.

2016-04-04  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8961: Update test script
	* tests/simulate/runtest.sh (Simulate): Do not generate bin file.
	Change exit address from byte to word address. Update options and add
	timeout parameter when invoking simulavr.
	(Compile): Auto detect multilib and CRT filename. Add device library
	to libraries list.

2016-03-17  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
